Renamed package from jimmbot_control to jimmbot_controller. Modified dependent files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(jimmbot_control)
+project(jimmbot_controller)
 
 add_compile_options(-std=c++11)
 
@@ -9,6 +9,6 @@ catkin_package()
 
 roslaunch_add_file_check(launch)
 
-install(DIRECTORY config launch
+install( DIRECTORY config launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
