--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>jimmbot_control</name>
+  <name>jimmbot_controller</name>
   <version>0.1.0</version>
   <description>mhRobotics jimmBOT controller configuration</description>
 
