--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -15,11 +15,11 @@ jimmbot_controller:
     wheel_separation: 0.22
     wheel_radius: 0.08255
 
-    # Odometry covariances for the encoder output of the robot. These values should
-    # be tuned to your robot's sample odometry data, but these values are a good place
-    # to start
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+
+    # enable_odom_tf: false
+    # odom_frame_id: odom
 
     # Top level frame (link) of the robot description
     base_frame_id: base_link
@@ -28,18 +28,18 @@ jimmbot_controller:
     linear:
       x:
         has_velocity_limits    : true
-        max_velocity           : 10  # m/s
+        max_velocity           : 1.0  # m/s
         has_acceleration_limits: true
         max_acceleration       : 3   # m/s^2
     angular:
       z:
         has_velocity_limits    : true
-        max_velocity           : 10   # rad/s
+        max_velocity           : 2.0  # rad/s
         has_acceleration_limits: true
-        max_acceleration       : 3   # rad/s^2
+        max_acceleration       : 6.0  # rad/s^2
 
 # gazebo_ros_control/pid_gains:
-#   wheel_axis_front_left_to_wheel_front_left: {p: 1.0, i: 0.0, d: 1.0}
-#   wheel_axis_back_left_to_wheel_back_left: {p: 1.0, i: 0.0, d: 1.0}
-#   wheel_axis_front_right_to_wheel_front_right: {p: 1.0, i: 0.0, d: 1.0}
-#   wheel_axis_back_right_to_wheel_back_right: {p: 1.0, i: 0.0, d: 1.0}
+#   wheel_axis_front_left_to_wheel_front_left: {p: 9.4833, i: 0.1625, d: 0.040625}
+#   wheel_axis_back_left_to_wheel_back_left: {p: 9.4833, i: 0.1625, d: 0.040625}
+#   wheel_axis_front_right_to_wheel_front_right: {p: 9.4833, i: 0.1625, d: 0.040625}
+#   wheel_axis_back_right_to_wheel_back_right: {p: 9.4833, i: 0.1625, d: 0.040625}
