--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -18,8 +18,9 @@ jimmbot_controller:
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
 
-    # enable_odom_tf: false
-    # odom_frame_id: odom
+    # In simulation, gazebo publishes the joint states and odom
+    enable_odom_tf: false
+    odom_frame_id: jimmbot/odom
 
     # Top level frame (link) of the robot description
     base_frame_id: base_link
