--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -12,15 +12,16 @@ jimmbot_controller:
     left_wheel: ['wheel_axis_front_left_to_wheel_front_left','wheel_axis_back_left_to_wheel_back_left']
     right_wheel: ['wheel_axis_front_right_to_wheel_front_right','wheel_axis_back_right_to_wheel_back_right']
 
-    wheel_separation: 0.22
+    # Tune for your hardware
+    wheel_separation: 1.0
+    wheel_separation_multiplier: 2.0
     wheel_radius: 0.08255
+    wheel_radius_multiplier: 1.0
 
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
 
-    # In simulation, gazebo publishes the joint states and odom
     enable_odom_tf: false
-    odom_frame_id: jimmbot/odom
 
     # Top level frame (link) of the robot description
     base_frame_id: base_link
@@ -29,15 +30,15 @@ jimmbot_controller:
     linear:
       x:
         has_velocity_limits    : true
-        max_velocity           : 1.0  # m/s
+        max_velocity           : 2.0   # m/s
         has_acceleration_limits: true
-        max_acceleration       : 3   # m/s^2
+        max_acceleration       : 6   # m/s^2
     angular:
       z:
         has_velocity_limits    : true
-        max_velocity           : 2.0  # rad/s
+        max_velocity           : 2.5   # rad/s
         has_acceleration_limits: true
-        max_acceleration       : 6.0  # rad/s^2
+        max_acceleration       : 9.0  # rad/s^2
 
 # gazebo_ros_control/pid_gains:
 #   wheel_axis_front_left_to_wheel_front_left: {p: 9.4833, i: 0.1625, d: 0.040625}
