--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,6 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>controller_manager</exec_depend>
 
-  <export>
-  </export>
+  <export />
+
 </package>
